welcome.lessons.welcome.bat.bool1.In3050.scala.error
in3050:-7: error: not found: value in3050
 val res = in3050( t.getParameter(0).asInstanceOf[Int], t.getParameter(1).asInstanceOf[Int]);
           ^in3050:3: error: type mismatch;
 found   : Boolean(false)
 required: Int
    return false
           ^in3050:6: error: type mismatch;
 found   : Boolean(false)
 required: Int
    return false
           ^in3050:9: error: type mismatch;
 found   : Boolean(false)
 required: Int
    return false
           ^in3050:12: error: type mismatch;
 found   : Boolean(false)
 required: Int
    return false
           ^in3050:16: error: type mismatch;
 found   : Boolean(true)
 required: Int
      return true
             ^in3050:18: error: type mismatch;
 found   : Boolean(false)
 required: Int
    return false
           ^in3050:22: error: type mismatch;
 found   : Boolean(true)
 required: Int
      return true
             ^in3050:24: error: type mismatch;
 found   : Boolean(false)
 required: Int
    return false
           ^in3050:20: error: type mismatch;
 found   : Unit
 required: Int
  if(a > 40){
  ^